unpackaged/main/default/objects/OrderApi__Currency_Conversion_Table__c/OrderApi__Currency_Conversion_Table__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This table will be referenced to populate the conversion for all BusinessGroups/Stores transactions.</description>
    <label>Currency Conversion Table</label>
</CustomObject>