unpackaged/main/default/objects/OrderApi__Currency_Conversion_Table__c/fields/OrderApi__Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Conversion_Rate__c</fullName>
    <description>Conversion rate of this currency type against source currency</description>
    <inlineHelpText>Conversion rate of this currency type against source currency</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>