unpackaged/main/default/objects/OrderApi__Currency_Conversion_Table__c/fields/OrderApi__Target_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Target_Currency_Code__c</fullName>
    <description>ISO code of the target currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</description>
    <inlineHelpText>ISO code of the target currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</inlineHelpText>
    <label>Target Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>