unpackaged/main/default/objects/OrderApi__Currency_Conversion_Table__c/fields/OrderApi__Target_Rounding_Setting__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Target_Rounding_Setting__c</fullName>
    <description>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</description>
    <inlineHelpText>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</inlineHelpText>
    <label>Target Rounding Setting</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>