unpackaged/main/default/objects/OrderApi__Currency_Conversion_Table__c/listViews/Fonteva1__All_Rates.listView-meta.xml
<ListView>
    <fullName>Fonteva1__All_Rates</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Source_Currency_Code__c</columns>
    <columns>OrderApi__Target_Currency_Code__c</columns>
    <columns>OrderApi__Conversion_Rate__c</columns>
    <columns>OrderApi__Source_Rounding_Setting__c</columns>
    <columns>OrderApi__Target_Rounding_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rates</label>
</ListView>